--- a/index.html
+++ b/index.html
@@ -3,10 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Asistente para el secretario de la congregación">    
+    <meta name="description" content="Asistente para el secretario de la congregación">
+    <link rel="stylesheet" href="CSS/index_layout.css">    
     <title>Secretario | Iniciar sesión</title>
 </head>
 <body>
-    
+    <section class="form">
+        <div class="logo"></div>
+        <div class="header">
+            <h3>Bienvenido</h3>
+            <h2>Secretario</h2>
+        </div>                           
+        <h4>Correo electrónico</h4>
+        <input class="field" type="text" name="usuario">
+        <h4>Contraseña</h4>
+        <input class="field" type="password" name="contrasena">
+        <input type="checkbox" id="keepLoggedIn">
+        <label for="keepLoggedIn">No cerrar sesión</label>
+        <input class="button" type="submit" value="Iniciar sesión">        
+        <a class="link" href="password_reset.html">¿Ha olvidado su contraseña?</a>
+    </section>
+    <div class="outside">
+        <h4>¿Necesita una cuenta?</h4>
+        <input class="account" type="submit" value="Crear una nueva cuenta">
+    </div>
+    <footer>
+        <div class="footer-container">
+            <div class="left-content">2023 Secretario</div>        
+            <div class="right-content">
+                <a href="">Condiciones de uso</a>
+                | 
+                <a href="">Política de privacidad</a>
+            </div>
+        </div>        
+    </footer>
 </body>
 </html>
