Se agregó el link para el logo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Asistente para el secretario de la congregación">
-    <link rel="stylesheet" href="CSS/index_layout.css">    
+    <link rel="stylesheet" href="CSS/index_layout.css">
+    <link rel="icon" href="images/Logo_placeholder.png">    
     <title>Secretario | Iniciar sesión</title>
 </head>
 <body>
