--- a/new_account.html
+++ b/new_account.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Asistente para el secretario de la congregación">
-    <link rel="stylesheet" href="CSS/new_account.css">
+    <link rel="stylesheet" href="CSS/new_account_layout.css">
     <link rel="icon" href="images/Logo_placeholder.png">
     <title>Secretario | Nueva cuenta</title>
 </head>
