--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -9,7 +9,7 @@
     <title>Secretario | Política de privacidad</title>
 </head>
 <body>
-    <section>
+    <section class="top-bar">
         <div class="logo"></div>
         <div class="header">
             <h3>Secretario</h3>
