Se terminó la página Política de Privacidad

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <footer>
         <div class="footer-container">
-            <div class="left-content">2023 Secretario</div>        
+            <div class="left-content">© 2023 Secretario</div>        
             <div class="right-content">
                 <a href="">Condiciones de uso</a>
                 | 
