Se actualizó el link de Políticas y Condiciones en todas las páginas

--- a/new_account.html
+++ b/new_account.html
@@ -31,9 +31,9 @@
         <div class="footer-container">
             <div class="left-content">2023 Secretario</div>        
             <div class="right-content">
-                <a href="">Condiciones de uso</a>
+                <a href="terms_conditions.html">Condiciones de uso</a>
                 | 
-                <a href="">Política de privacidad</a>
+                <a href="privacy_policy.html">Política de privacidad</a>
             </div>
         </div>        
     </footer>
