--- a/password_reset.html
+++ b/password_reset.html
@@ -24,9 +24,9 @@
         <div class="footer-container">
             <div class="left-content">2023 Secretario</div>        
             <div class="right-content">
-                <a class="terms" href="">Condiciones de uso</a>
+                <a class="terms" href="terms_conditions.html">Condiciones de uso</a>
                 | 
-                <a class="terms" href="">Política de privacidad</a>
+                <a class="terms" href="privacy_policy.html">Política de privacidad</a>
             </div>
         </div>        
     </footer>
