Se crearon las tarjetas del menú principal

--- a/password_reset.html
+++ b/password_reset.html
@@ -22,7 +22,7 @@
     </div>
     <footer>
         <div class="footer-container">
-            <div class="left-content">2023 Secretario</div>        
+            <div class="left-content">© 2023 Secretario</div>        
             <div class="right-content">
                 <a class="terms" href="terms_conditions.html">Condiciones de uso</a>
                 | 
