Se agregó una imagen de fondo a los formularios de inicio, restaurar contraseña y crear cuenta

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
         <input class="button" type="submit" value="Iniciar sesión">        
         <a class="link" href="password_reset.html">¿Ha olvidado su contraseña?</a>
     </section>
+    
     <div class="outside">
-        <h4>¿Necesita una cuenta?</h4>
-        <input class="account" type="submit" value="Crear una nueva cuenta">
+        <h4 class="new-account">¿Necesita una cuenta?</h4>
+        <button id="account"><a href="new_account.html" class="account">Crear una nueva cuenta</a></button>
     </div>
     <footer>
         <div class="footer-container">
