--- a/new_account.html
+++ b/new_account.html
@@ -25,7 +25,7 @@
         <input class="button" type="submit" value="Crear cuenta">
     </section>
     <div class="outside">
-        <h4>¿Ya tiene una cuenta? <a class="login" href="index.html">Iniciar sesión</a></h4>        
+        <h4 class="account">¿Ya tiene una cuenta? <a class="account" href="index.html">Iniciar sesión</a></h4>        
     </div>
     <footer>
         <div class="footer-container">
