Se creo la página de administración de cuenta

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Asistente para el secretario de la congregación">
     <link rel="stylesheet" href="CSS/index_layout.css">
     <link rel="icon" href="images/Logo_placeholder.png">    
-    <title>Secretario | Iniciar sesión</title>
+    <title>Iniciar sesión</title>
 </head>
 <body>
     <section class="form">
