--- a/new_account.html
+++ b/new_account.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Asistente para el secretario de la congregación">
     <link rel="stylesheet" href="CSS/new_account_layout.css">
     <link rel="icon" href="images/Logo_placeholder.png">
-    <title>Secretario | Nueva cuenta</title>
+    <title>Crear cuenta</title>
 </head>
 <body>
     <section class="form">
