--- a/password_reset.html
+++ b/password_reset.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Restablecer contraseña">
     <link rel="stylesheet" href="CSS/password_reset_layout.css">
     <link rel="icon" href="images/Logo_placeholder.png">
-    <title>Secretario | Restablecer contraseña</title>
+    <title>Restablecer contraseña</title>
 </head>
 <body>
     <section class="form">
