--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Asistente para el secretario de la congregación">
     <link rel="stylesheet" href="CSS/policyConditions_layout.css">
     <link rel="icon" href="images/Logo_placeholder.png">
-    <title>Secretario | Política de privacidad</title>
+    <title>Política de privacidad</title>
 </head>
 <body>
     <section class="top-bar">
