--- a/main_menu.html
+++ b/main_menu.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Asistente para el secretario de la congregación">
     <link rel="stylesheet" href="CSS/main_menu_layout.css">
     <link rel="icon" href="images/Logo_placeholder.png">
-    <title>Secretario | Menú principal</title>
+    <title>Menú principal</title>
 </head>
 <body>
     <section class="top-bar">
