--- a/terms_conditions.html
+++ b/terms_conditions.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Asistente para el secretario de la congregación">
     <link rel="stylesheet" href="CSS/policyConditions_layout.css">
     <link rel="icon" href="images/Logo_placeholder.png">
-    <title>Secretario | Condiciones de uso</title>
+    <title>Condiciones de uso</title>
 </head>
 <body>
     <section class="top-bar">
