Se agregó un link al logo Secreatario que lleve al menú principal

--- a/error_page.html
+++ b/error_page.html
@@ -5,18 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error 404 - Página no encontrada</title>
     <link rel="stylesheet" href="css/error_page_layout.css">
+    <link rel="icon" href="images/Secretario_logo.png">
 </head>
 <body>
     <section class="top-bar">
-        <div class="logo"></div>
-        <div class="header">
-            <h3>Secretario</h3>
-        </div> 
+        <a href="main_menu.html">        
+            <div class="logo"></div>        
+            <div class="header">
+                <h3>Secretario</h3>
+            </div>
+        </a>     
     </section>
     <div class="error-container">
         <h1>Error 404</h1>
         <p>La página que busca no se encuentra.</p>
-        <a class="link-home" href="/">Volver a la página de inicio</a>
+        <a class="link-home" href="main_menu.html">Volver a la página de inicio</a>
     </div>
     <footer>
         <div class="footer-container">
