--- a/main_menu.html
+++ b/main_menu.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Asistente para el secretario de la congregación">
     <link rel="stylesheet" href="CSS/main_menu_layout.css">
-    <link rel="icon" href="images/Logo_placeholder.png">
+    <link rel="icon" href="images/Secretario_logo.png">
     <title>Menú principal</title>
 </head>
 <body>
@@ -13,12 +13,12 @@
         <div class="logo"></div>
         <div class="header">
             <h3>Secretario</h3>
-        </div> 
+        </div>
     </section>
     <section class="main-menu">
         <div class="menu-card">
             <div class="menu-bar">
-                <div class="icon"></div>
+                <div class="icon pub-icon"></div>
                 <div class="menu-header">
                     <h3>Publicadores</h3>
                     <h3>y precursores</h3>
@@ -33,7 +33,7 @@
         </div>
         <div class="menu-card">
             <div class="menu-bar">
-                <div class="icon"></div>
+                <div class="icon form-icon"></div>
                 <div class="menu-header">
                     <h3 class="menu-title">Informes</h3>
                 </div>
@@ -45,7 +45,7 @@
         </div>
         <div class="menu-card">
             <div class="menu-bar">
-                <div class="icon"></div>
+                <div class="icon meeting-icon"></div>
                 <div class="menu-header">
                     <h3 class="menu-title">Reuniones</h3>
                 </div>
