--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Asistente para el secretario de la congregación">
     <link rel="stylesheet" href="CSS/index_layout.css">
-    <link rel="icon" href="images/Logo_placeholder.png">    
+    <link rel="icon" href="images/Secretario_logo.png">    
     <title>Iniciar sesión</title>
 </head>
 <body>
     <section class="form">
         <div class="logo"></div>
         <div class="header">
-            <h3>Bienvenido</h3>
             <h2>Secretario</h2>
+            <h4>El asistente perfecto</h4>
         </div>                           
         <h4>Correo electrónico</h4>
         <input class="field" type="text" name="usuario">
