--- a/new_account.html
+++ b/new_account.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Asistente para el secretario de la congregación">
     <link rel="stylesheet" href="CSS/new_account_layout.css">
-    <link rel="icon" href="images/Logo_placeholder.png">
+    <link rel="icon" href="images/Secretario_logo.png">
     <title>Crear cuenta</title>
 </head>
 <body>
     <section class="form">
         <div class="logo"></div>
-        <div class="header">Crear nueva cuenta</div>
+        <div class="header"><h3>Crear nueva cuenta</h3></div>
         <h4>Nombre del secretario</h4>        
         <input class="field" type="text" name="usuario">
         <h4>Congregación</h4>
