--- a/password_reset.html
+++ b/password_reset.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Restablecer contraseña">
     <link rel="stylesheet" href="CSS/password_reset_layout.css">
-    <link rel="icon" href="images/Logo_placeholder.png">
+    <link rel="icon" href="images/Secretario_logo.png">
     <title>Restablecer contraseña</title>
 </head>
 <body>
     <section class="form">
         <div class="logo"></div>
-        <div class="header">Restablecer contraseña</div>
+        <div class="header"><h3>Restablecer contraseña</h3></div>
         <div>Enviaremos un mensaje a su correo electrónico para restablecer su contraseña.</div>                          
         <h4 class="form-text">Correo electrónico</h4>
         <input class="field" type="text" name="usuario">        
