--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Asistente para el secretario de la congregación">
-    <link rel="stylesheet" href="CSS/policyConditions_layout.css">
-    <link rel="icon" href="images/Logo_placeholder.png">
+    <link rel="stylesheet" href="CSS/policy-conditions_layout.css">
+    <link rel="icon" href="images/Secretario_logo.png">
     <title>Política de privacidad</title>
 </head>
 <body>
     <section class="top-bar">
-        <div class="logo"></div>
-        <div class="header">
-            <h3>Secretario</h3>
-        </div> 
+        <a href="main_menu.html">        
+            <div class="logo"></div>        
+            <div class="header">
+                <h3>Secretario</h3>
+            </div>
+        </a>     
     </section>
     <div class="content">
         <h1>Política de Privacidad</h1>
