--- a/user_settings.html
+++ b/user_settings.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Asistente para el secretario de la congregación">
     <link rel="stylesheet" href="CSS/user_settings_layout.css">
-    <link rel="icon" href="images/Logo_placeholder.png">
+    <link rel="icon" href="images/Secretario_logo.png">
     <title>Administrar cuenta</title>
 </head>
-<body>
+<body>    
     <section class="top-bar">
-        <div class="logo"></div>
-        <div class="header">
-            <h3>Secretario</h3>
-        </div> 
-    </section>
+        <a href="main_menu.html">        
+            <div class="logo"></div>        
+            <div class="header">
+                <h3>Secretario</h3>
+            </div>
+        </a>     
+    </section>    
     <aside class="side-bar">
             <div class="option"><a href="main_menu.html" class="option-link">Menú Principal</a></div>
             <div class="option"><a href="" class="option-link">Congregación</a></div>
