Se agregó el botón ajustes al Menú Principal

--- a/main_menu.html
+++ b/main_menu.html
@@ -10,10 +10,15 @@
 </head>
 <body>
     <section class="top-bar">
-        <div class="logo"></div>
-        <div class="header">
-            <h3>Secretario</h3>
+        <div>
+            <div class="logo"></div>                    
+            <div class="header">
+                <h3>Secretario</h3>
+            </div>
         </div>
+        <div>
+            <a class="settings" href="user_settings.html">Perfil</a>
+        </div>        
     </section>
     <section class="main-menu">
         <div class="menu-card">
@@ -62,6 +67,8 @@
                 <a href="terms_conditions.html">Condiciones de uso</a>
                 | 
                 <a href="privacy_policy.html">Política de privacidad</a>
+                | 
+                <a href="about_us.html">Sobre nosotros</a>
             </div>
         </div>        
     </footer>   
