--- a/new_account.html
+++ b/new_account.html
@@ -34,6 +34,8 @@
                 <a href="terms_conditions.html">Condiciones de uso</a>
                 | 
                 <a href="privacy_policy.html">Política de privacidad</a>
+                | 
+                <a href="about_us.html">Sobre nosotros</a>
             </div>
         </div>        
     </footer>
