--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -29,6 +29,8 @@
             <div class="left-content">© 2023 Secretario</div>        
             <div class="right-content">
                 <a href="terms_conditions.html">Condiciones de uso</a>
+                |                 
+                <a href="about_us.html">Sobre nosotros</a>
             </div>
         </div>        
     </footer>  
