--- a/terms_conditions.html
+++ b/terms_conditions.html
@@ -29,7 +29,9 @@
         <div class="footer-container">
             <div class="left-content">© 2023 Secretario</div>        
             <div class="right-content">
-                <a href="privacy_policy.html">Política de Privacidad</a>
+                <a href="privacy_policy.html">Política de privacidad</a>
+                | 
+                <a href="about_us.html">Sobre nosotros</a>
             </div>
         </div>        
     </footer>  
