--- a/user_settings.html
+++ b/user_settings.html
@@ -21,6 +21,7 @@
             <div class="option"><a href="main_menu.html" class="option-link">Menú Principal</a></div>
             <div class="option"><a href="" class="option-link">Congregación</a></div>
             <div class="option"><a href="" class="option-link">Contraseña</a></div>
+            <div class="option"><a href="index.html" class="option-link">Cerrar sesión</a></div>
     </aside>
     <div class="content">
         <h1>Nombre de la congregación</h1>
@@ -39,6 +40,8 @@
                 <a href="terms_conditions.html">Condiciones de uso</a>
                 | 
                 <a href="privacy_policy.html">Política de privacidad</a>
+                | 
+                <a href="about_us.html">Sobre nosotros</a>
             </div>
         </div>        
     </footer>   
