--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                 <a href="terms_conditions.html">Condiciones de uso</a>
                 | 
                 <a href="privacy_policy.html">Política de privacidad</a>
+                | 
+                <a href="about_us.html">Sobre nosotros</a>
             </div>
         </div>        
     </footer>
