Se agregó el archivo javascript

--- a/main_menu.html
+++ b/main_menu.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="menu-content">
-                <a href="">Publicadores y precursores</a>
+                <a href="publishers.html">Publicadores y precursores</a>
                 <a href="">Formulario S-21</a>
                 <a href="">Contactos de emergencia</a>
                 <a href="">Grupos de servicio</a>                   
