--- a/publishers.html
+++ b/publishers.html
@@ -30,61 +30,70 @@
                 <h1>Publicadores y precursores</h1>
                 <br>
                 <div class="row">
-                    <div class="col-3">
-                        <label for="nombres" class="form-label">Nombres</label>
-                        <input type="text" class="form-control" id="nombres" placeholder="Nombre completo">
+                    <div class="col-4">
+                        <br>
+                        <label for="nombres" class="form-label">Nombre Completo*</label>
+                        <input type="text" class="form-control" id="nombres" placeholder="Nombre Apellido">
                     </div>
-                    <div class="col-3">
-                        <label for="fechaNacimiento" class="form-label">Fecha de nacimiento</label>
+                    <div class="col-2">
+                        <br>
+                        <div>Sexo*</div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="hombre">
+                            <label class="form-check-label" for="hombre">
+                              Hombre
+                            </label>
+                          </div>
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="mujer">
+                            <label class="form-check-label" for="mujer">
+                              Mujer
+                            </label>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <label for="fechaNacimiento" class="form-label">Fecha de nacimiento*</label>
                         <input type="date" class="form-control" id="fechaNacimiento">
                     </div>
-                    <div class="col-3">
+                    <div class="col-2">
                         <label for="fechaBautismo" class="form-label">Fecha de bautismo</label>
                         <input type="date" class="form-control" id="fechaBautismo">
                     </div>                                     
-                    <div class="col-3">
+                    <div class="col-2">
+                        <br>
                         <label for="telefono" class="form-label">Teléfono</label>
                         <input type="number" class="form-control" id="telefono">
-                    </div>                    
-                </div>
+                    </div>                                        
+                </div>                
                 <br>
                 <div class="row">
                     <div class="col-12">
-                        <button type="button" id="btnSubmit" class="btn btn-primary btn-lg">Agregar</button>
-                        <button type="reset" id="resetData" class="btn btn-secondary btn-lg">Limpiar</button>
-                        <button type="button" id="deleteData" class="btn btn-lg btn-danger">Borrar todo</button>
+                        <button type="button" id="btnSubmit" >Agregar</button>
+                        <button type="reset" id="resetData">Limpiar</button>
+                        <button type="button" id="deleteData">Borrar todo</button>
                     </div>
                 </div>
             </form>
             <br>
-            <table class="table">
-                <thead>
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Nombres</th>
-                    <th scope="col">Fecha de nacimiento</th>
-                    <th scope="col">Edad</th>
-                    <th scope="col">Fecha de bautismo</th>                    
-                    <th scope="col">Telefono</th>                    
-                  </tr>
-                </thead>
-                <tbody id="bodyList">
-                </tbody>
-              </table>   
+            <div class="table-container">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Nombre Completo</th>
+                        <th scope="col">Sexo</th>
+                        <th scope="col">Fecha de nacimiento</th>
+                        <th scope="col">Edad</th>
+                        <th scope="col">Fecha de bautismo</th>                    
+                        <th scope="col">Telefono</th>                    
+                    </tr>
+                    </thead>
+                    <tbody id="bodyList">
+                    </tbody>
+                </table>
+            </div>   
         </div>
     </div>
-    <footer>
-        <div class="footer-container">
-            <div class="left-content">© 2023 Secretario</div>        
-            <div class="right-content">
-                <a href="terms_conditions.html">Condiciones de uso</a>
-                | 
-                <a href="privacy_policy.html">Política de privacidad</a>
-                | 
-                <a href="about_us.html">Sobre nosotros</a>
-            </div>
-        </div>        
-    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>   
