--- a/index.html
+++ b/index.html
@@ -1,50 +1,29 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Asistente para el secretario de la congregación">
     <link rel="stylesheet" href="CSS/index_layout.css">
-    <link rel="icon" href="images/Secretario_logo.png">    
-    <title>Iniciar sesión</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="icon" href="images/Secretario_logo.png">
+    <title>Secretario</title>
 </head>
 <body>
-    <section class="form">
-        <div class="logo"></div>
-        <div class="header">
-            <h2>Secretario</h2>
-            <h4>El asistente perfecto</h4>
-        </div>                           
-        <h4>Correo electrónico</h4>
-        <input class="field" type="text" name="usuario">
-        <h4>Contraseña</h4>
-        <input class="field" type="password" name="contrasena">
-        <input type="checkbox" id="keepLoggedIn">
-        <label for="keepLoggedIn">No cerrar sesión</label>
-        <input id="login-button" class="button" type="submit" value="Iniciar sesión">        
-        <a class="link" href="password_reset.html">¿Ha olvidado su contraseña?</a>
-    </section>    
-    <div class="outside">
-        <h4 class="new-account">¿Necesita una cuenta?</h4>
-        <button id="account"><a href="new_account.html" class="account">Crear una nueva cuenta</a></button>
-    </div>
-    <footer>
-        <div class="footer-container">
-            <div class="left-content">© 2023 Secretario</div>        
-            <div class="right-content">
-                <a href="terms_conditions.html">Condiciones de uso</a>
-                | 
-                <a href="privacy_policy.html">Política de privacidad</a>
-                | 
-                <a href="about_us.html">Sobre nosotros</a>
+    <div class="container">
+        <div class="card-container">
+            <div class="card custom-card">
+                <div class="card-content custom-text-color center-align">
+                    <img src="images/Secretario_logo.png" alt="Secretario Logo" class="logo">
+                    <span class="card-title">Bienvenido a Secretario</span>
+                    <p>Seleccione que desea hacer</p>
+                </div>
+                <div class="card-action center-align">
+                    <a href="form.html" class="btn custom-btn">Enviar informe</a>
+                    <a href="login.html" class="btn custom-btn">Iniciar sesión</a>
+                </div>
             </div>
-        </div>        
-    </footer>
-    <script>
-        const loginButton = document.getElementById("login-button");
-        loginButton.addEventListener("click", function() {
-            window.location.href = "main_menu.html"
-        })
-    </script>
+        </div>
+    </div>
 </body>
 </html>
