Se ajustó para que Año y Mes solo muestren el año y mes actual y anterior

--- a/login.html
+++ b/login.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <section class="form">
-        <div class="logo"></div>
+        <a href="index.html">
+            <div class="logo"></div>
+        </a>
         <div class="header">
             <h2>Secretario</h2>
             <h4>El asistente perfecto</h4>
