Se agregó la opción para enviar informes desde la página form.html

--- a/form.html
+++ b/form.html
@@ -37,7 +37,7 @@
             <input type="number" id="videos" name="videos" class="field">
             <h4>Horas</h4>
             <input type="number" id="horas" name="horas" class="field" required>
-            <button type="submit" class="button">Enviar</button>
+            <button type="button" class="button" id="btnEnviarInforme">Enviar</button>
         </form>    
     </section> 
     <footer>
