La página de enviar informes está funcionando correctamente

--- a/main_menu.html
+++ b/main_menu.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="menu-content">
-                <a href="">Informes del mes</a>
+                <a href="reports.html">Informes del mes</a>
                 <a href="">Informes pendientes</a>                  
             </div>           
         </div>
