Se agregó un archivo footer.html y uno footer.js para agregar el footer a todas las páginas sin tener que hacerlo una por una. Se renombro el archivo new_account.html por register.html

--- a/main_menu.html
+++ b/main_menu.html
@@ -60,17 +60,6 @@
             </div>            
         </div>
     </section>
-    <footer>
-        <div class="footer-container">
-            <div class="left-content">© 2023 Secretario</div>        
-            <div class="right-content">
-                <a href="terms_conditions.html">Condiciones de uso</a>
-                | 
-                <a href="privacy_policy.html">Política de privacidad</a>
-                | 
-                <a href="about_us.html">Sobre nosotros</a>
-            </div>
-        </div>        
-    </footer>   
+    <script src="javascript/footer.js"></script>  
 </body>
 </html>
