--- a/password_reset.html
+++ b/password_reset.html
@@ -20,17 +20,6 @@
     <div class="outside">
         <h4 class="account">¿Ya tiene una cuenta? <a class="account" href="index.html">Iniciar sesión</a></h4>        
     </div>
-    <footer>
-        <div class="footer-container">
-            <div class="left-content">© 2023 Secretario</div>        
-            <div class="right-content">
-                <a href="terms_conditions.html">Condiciones de uso</a>
-                | 
-                <a href="privacy_policy.html">Política de privacidad</a>
-                | 
-                <a href="about_us.html">Sobre nosotros</a>
-            </div>
-        </div>        
-    </footer>
+    <script src="javascript/footer.js"></script>
 </body>
 </html>
