--- a/register.html
+++ b/register.html
@@ -15,7 +15,9 @@
         <div class="card-container">
             <div class="card custom-card">
                 <div class="card-content custom-text-color center-align">
-                    <img src="images/Secretario_logo.png" alt="Secretario Logo" class="logo">
+                    <a href="index.html">
+                        <img src="images/Secretario_logo.png" alt="Secretario Logo" class="logo">
+                    </a>
                     <span class="card-title">Crear cuenta</span>
                 </div>
                 <div class="card-action center-align">
@@ -35,5 +37,6 @@
             </div>
         </div>
     </div>
+    <script src="javascript/footer.js"></script>
 </body>
 </html>
