--- a/user_settings.html
+++ b/user_settings.html
@@ -33,17 +33,6 @@
         <p>Si borra la congregación perderá todos los datos ingresados, lo que incluye su cuenta. Se recomienda exportar todos los datos primero.</p>
         <input class="button" type="submit" value="Borrar">
     </div>
-    <footer>
-        <div class="footer-container">
-            <div class="left-content">© 2023 Secretario</div>        
-            <div class="right-content">
-                <a href="terms_conditions.html">Condiciones de uso</a>
-                | 
-                <a href="privacy_policy.html">Política de privacidad</a>
-                | 
-                <a href="about_us.html">Sobre nosotros</a>
-            </div>
-        </div>        
-    </footer>   
+    <script src="javascript/footer.js"></script>   
 </body>
 </html>
