--- a/about_us.html
+++ b/about_us.html
@@ -34,15 +34,6 @@
             </section>
         </main>
     </div>
-    <footer>
-        <div class="footer-container">
-            <div class="left-content">© 2023 Secretario</div>        
-            <div class="right-content">
-                <a href="terms_conditions.html">Condiciones de uso</a>
-                | 
-                <a href="privacy_policy.html">Política de privacidad</a>
-            </div>
-        </div>        
-    </footer>  
+    <script src="javascript/footer.js"></script>  
 </body>
 </html>
