--- a/error_page.html
+++ b/error_page.html
@@ -21,17 +21,6 @@
         <p>La página que busca no se encuentra.</p>
         <a class="link-home" href="main_menu.html">Volver a la página de inicio</a>
     </div>
-    <footer>
-        <div class="footer-container">
-            <div class="left-content">© 2023 Secretario</div>        
-            <div class="right-content">
-                <a href="terms_conditions.html">Condiciones de uso</a>
-                | 
-                <a href="privacy_policy.html">Política de privacidad</a>
-                | 
-                <a href="about_us.html">Sobre nosotros</a>
-            </div>
-        </div>        
-    </footer>     
+    <script src="javascript/footer.js"></script>     
 </body>
 </html>
