--- a/form.html
+++ b/form.html
@@ -39,18 +39,7 @@
             <input type="number" id="horas" name="horas" class="field" required>
             <button type="button" class="button" id="btnEnviarInforme">Enviar</button>
         </form>    
-    </section> 
-    <footer>
-        <div class="footer-container">
-            <div class="left-content">© 2023 Secretario</div>        
-            <div class="right-content">
-                <a href="terms_conditions.html">Condiciones de uso</a>
-                | 
-                <a href="privacy_policy.html">Política de privacidad</a>
-                | 
-                <a href="about_us.html">Sobre nosotros</a>
-            </div>
-        </div>        
-    </footer>
+    </section>
+    <script src="javascript/footer.js"></script>
 </body>
 </html>
