--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Asistente para el secretario de la congregación">
-    <link rel="stylesheet" href="CSS/index_layout.css">
+    <link rel="stylesheet" href="CSS/login_layout.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="icon" href="images/Secretario_logo.png">
     <script type="text/javascript" src="javascript/register.js"></script>
