Son los archivos más actualizados

--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
                             <input type="password" id="password" name="password" required>
                             <label for="password">Contraseña</label>
                         </div>
-                        <button type="button" class="btn custom-btn" onclick="login()">Login</button>
+                        <button type="button" class="btn custom-btn" onclick="login()">Iniciar Sesión</button>
                     </form>
                     <p class="new-account">¿Necesita una cuenta? <a href="register.html" class="account">Crear una nueva cuenta</a></p>
                 </div>
