--- a/publishers.html
+++ b/publishers.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,65 +9,67 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script type="text/javascript" src="javascript/publishers.js"></script>
-    <title>Publicadores y precursores</title>    
+    <title>Publicadores y precursores</title>
 </head>
-<body>    
+<body>
     <section class="top-bar">
-        <a href="main_menu.html">        
-            <div class="logo"></div>        
+        <a href="main_menu.html">
+            <div class="logo"></div>
             <div class="header">
                 <h3>Secretario</h3>
             </div>
-        </a>     
-    </section>    
+        </a>
+        <div class="dropdown">
+            <a class="settings dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">Perfil</a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuLink">
+                <li><a class="dropdown-item" href="user_settings.html">Configuración</a></li>
+                <li><a class="dropdown-item" href="logout.html">Cerrar sesión</a></li>
+            </ul>
+        </div>
+    </section>
     <aside class="side-bar">
-            <div class="option"><a href="main_menu.html" class="option-link">Menú Principal</a></div>
-
+        <div class="option"><a href="main_menu.html" class="option-link">Menú Principal</a></div>
     </aside>
     <div class="content">
         <div class="container">
-            <form action="#" >
+            <form action="#">
                 <h1>Publicadores y precursores</h1>
                 <br>
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-md-4">
                         <label for="nombres" class="form-label">Nombre Completo*</label>
-                        <input type="text" class="form-control" id="nombres" placeholder="Nombre Apellido">
-                    </div>                    
-                    <div class="col-2">
-                        <label for="fechaNacimiento" class="form-label">Fecha de nacimiento*</label>
-                        <input type="date" class="form-control" id="fechaNacimiento">
+                        <input type="text" class="form-control" id="nombres" placeholder="Nombre Apellido" required>
                     </div>
-                    <div class="col-2">
+                    <div class="col-md-2">
+                        <label for="fechaNacimiento" class="form-label">Fecha de nacimiento*</label>
+                        <input type="date" class="form-control" id="fechaNacimiento" required>
+                    </div>
+                    <div class="col-md-2">
                         <label for="fechaBautismo" class="form-label">Fecha de bautismo</label>
                         <input type="date" class="form-control" id="fechaBautismo">
                     </div>
-                    <div class="col-2">
+                    <div class="col-md-2">
                         <div>Sexo*</div>
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="hombre">
-                            <label class="form-check-label" for="hombre">
-                              Hombre
-                            </label>
-                          </div>
-                          <div class="form-check">
-                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="mujer">
-                            <label class="form-check-label" for="mujer">
-                              Mujer
-                            </label>
+                            <input class="form-check-input" type="radio" name="sexo" id="hombre" value="Hombre" required>
+                            <label class="form-check-label" for="hombre">Hombre</label>
                         </div>
-                    </div>                                     
-                    <div class="col-2">
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="sexo" id="mujer" value="Mujer" required>
+                            <label class="form-check-label" for="mujer">Mujer</label>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
                         <label for="notas" class="form-label">Notas</label>
                         <input type="text" class="form-control" id="notas">
-                    </div>                                        
-                </div>                
+                    </div>
+                </div>
                 <br>
                 <div class="row">
                     <div class="col-12">
-                        <button type="button" id="btnSubmit" >Agregar</button>
-                        <button type="reset" id="resetData">Limpiar</button>
-                        <button type="button" id="deleteData">Borrar todo</button>
+                        <button type="button" id="btnSubmit" class="btn custom-btn">Agregar</button>
+                        <button type="reset" id="resetData" class="btn custom-btn">Limpiar</button>
+                        <button type="button" id="deleteData" class="btn custom-btn">Borrar todo</button>
                     </div>
                 </div>
             </form>
@@ -75,25 +77,24 @@
             <div class="table-container">
                 <table class="table">
                     <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Nombre Completo</th>                        
-                        <th scope="col">Fecha de nacimiento</th>
-                        <th scope="col">Edad</th>
-                        <th scope="col">Fecha de bautismo</th>
-                        <th scope="col">Sexo</th>                    
-                        <th scope="col">Notas</th>                    
-                    </tr>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Nombre Completo</th>
+                            <th scope="col">Fecha de nacimiento</th>
+                            <th scope="col">Edad</th>
+                            <th scope="col">Fecha de bautismo</th>
+                            <th scope="col">Sexo</th>
+                            <th scope="col">Notas</th>
+                        </tr>
                     </thead>
                     <tbody id="bodyList">
                     </tbody>
                 </table>
-            </div>   
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-        <script src="javascript/footer.js"></script>   
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="javascript/footer.js"></script>
 </body>
 </html>
