Se actualizó la opción de eliminar informes

--- a/reports.html
+++ b/reports.html
@@ -49,6 +49,7 @@
             <h4>Actualizar Informe</h4>
             <form id="updateForm">
                 <input type="hidden" id="updateId">
+                <input type="hidden" id="updateIdPublicador" />
                 <h4>Año</h4>
                 <input type="number" id="updateAnio" name="anio" class="field" required>
                 <h4>Mes</h4>
