--- a/publishers.html
+++ b/publishers.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Asistente para el secretario de la congregación">
     <link rel="stylesheet" href="CSS/publishers_layout.css">
+    <link rel="stylesheet" href="CSS/topbar_layout.css">
+    <link rel="stylesheet" href="CSS/footer_layout.css">
     <link rel="icon" href="images/Secretario_logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -12,21 +14,7 @@
     <title>Publicadores y precursores</title>
 </head>
 <body>
-    <section class="top-bar">
-        <a href="main_menu.html">
-            <div class="logo"></div>
-            <div class="header">
-                <h3>Secretario</h3>
-            </div>
-        </a>
-        <div class="dropdown">
-            <a class="settings dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">Perfil</a>
-            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuLink">
-                <li><a class="dropdown-item" href="user_settings.html">Configuración</a></li>
-                <li><a class="dropdown-item" href="logout.html">Cerrar sesión</a></li>
-            </ul>
-        </div>
-    </section>
+    <div id="topbar-container"></div>
     <aside class="side-bar">
         <div class="option"><a href="main_menu.html" class="option-link">Menú Principal</a></div>
     </aside>
@@ -96,5 +84,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="javascript/footer.js"></script>
+    <script src="javascript/topbar.js"></script>
 </body>
 </html>
