Se actualizó la apariencia de la página reports.html para que se pareciera más a la monthly_reports.html

--- a/topbar.html
+++ b/topbar.html
@@ -9,7 +9,7 @@
         <a class="settings dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">Perfil</a>
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuLink">
             <li><a class="dropdown-item" href="user_settings.html">Configuración</a></li>
-            <li><a class="dropdown-item" href="logout.html">Cerrar sesión</a></li>
+            <li><a class="dropdown-item" href="index.html">Cerrar sesión</a></li>
         </ul>
     </div>
 </section>
