--- a/reports.html
+++ b/reports.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Asistente para el secretario de la congregación">
     <link rel="stylesheet" href="CSS/reports_layout.css">
     <link rel="stylesheet" href="CSS/topbar_layout.css">
+    <link rel="stylesheet" href="CSS/footer_layout.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="icon" href="images/Secretario_logo.png">
@@ -17,16 +18,10 @@
     <aside class="side-bar">
         <div class="option"><a href="main_menu.html" class="option-link">Menú Principal</a></div>
     </aside>
-    <section class="form">
-        <a href="main_menu.html">
-            <div class="logo"></div>
-        </a>
-        <div class="header">
-            <h2>Secretario</h2>
-            <h4>Ver Informes</h4>
-        </div>
+    <section class="form">        
         <form id="informeForm">
-            <h4>Seleccionar Publicador</h4>
+            <h1>Seleccionar Publicador</h1>
+            <br>
             <select id="publicador" name="publicador" class="field" required>
                 <!-- Opciones serán llenadas dinámicamente con JavaScript -->
             </select>
@@ -52,37 +47,37 @@
     <!-- Modal para actualizar informe -->
     <div id="updateModal" class="modal">
         <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Actualizar Informe</h2>
-            <form id="updateForm">
-                <input type="hidden" id="updateIdPublicador" />
-                <div class="form-group">
-                    <label for="updateAnio">Año:</label>
-                    <input type="text" id="updateAnio" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="updateMes">Mes:</label>
-                    <input type="text" id="updateMes" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="updatePublicaciones">Publicaciones:</label>
-                    <input type="text" id="updatePublicaciones" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="updateVideos">Videos:</label>
-                    <input type="text" id="updateVideos" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="updateHoras">Horas:</label>
-                    <input type="text" id="updateHoras" class="form-control">
-                </div>
-                <button type="button" id="btnUpdateInforme" class="btn btn-primary">Actualizar</button>
-            </form>
+          <span class="close">&times;</span>
+          <h2>Actualizar Informe</h2>
+          <form id="updateForm">
+            <input type="hidden" id="updateIdPublicador" />
+            <div class="form-group">
+              <label for="updateAnio">Año:</label>
+              <input type="text" id="updateAnio" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="updateMes">Mes:</label>
+              <input type="text" id="updateMes" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="updatePublicaciones">Publicaciones:</label>
+              <input type="text" id="updatePublicaciones" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="updateVideos">Videos:</label>
+              <input type="text" id="updateVideos" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="updateHoras">Horas:</label>
+              <input type="text" id="updateHoras" class="form-control">
+            </div>
+            <button type="button" id="btnUpdateInforme" class="btn btn-primary">Actualizar</button>
+          </form>
         </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="javascript/footer.js"></script>
-    <script src="javascript/topbar.js"></script>
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="javascript/footer.js"></script>
+  <script src="javascript/topbar.js"></script>
 </body>
 </html>
