Se eliminó el archivo main_menu.html, ahora publishers.html será el menú principal. Se eliminó el footer de la página de inicio, login, register, form.

--- a/error_page.html
+++ b/error_page.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section class="top-bar">
-        <a href="main_menu.html">        
+        <a href="publishers.html">        
             <div class="logo"></div>        
             <div class="header">
                 <h3>Secretario</h3>
@@ -19,7 +19,7 @@
     <div class="error-container">
         <h1>Error 404</h1>
         <p>La página que busca no se encuentra.</p>
-        <a class="link-home" href="main_menu.html">Volver a la página de inicio</a>
+        <a class="link-home" href="index.html">Volver a la página de inicio</a>
     </div>
     <script src="javascript/footer.js"></script>     
 </body>
