--- a/monthly_reports.html
+++ b/monthly_reports.html
@@ -15,7 +15,8 @@
 <body>
     <div id="topbar-container"></div>
     <aside class="side-bar">
-        <div class="option"><a href="main_menu.html" class="option-link">Menú Principal</a></div>
+        <div class="option"><a href="publishers.html" class="option-link">Publicadores</a></div>
+        <div class="option"><a href="reports.html" class="option-link">Informes por publicador</a></div>        
     </aside>
     <div class="content">
         <div class="container">
