--- a/publishers.html
+++ b/publishers.html
@@ -11,17 +11,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script type="text/javascript" src="javascript/publishers.js"></script>
-    <title>Publicadores y precursores</title>
+    <title>Publicadores</title>
 </head>
 <body>
     <div id="topbar-container"></div>
     <aside class="side-bar">
-        <div class="option"><a href="main_menu.html" class="option-link">Menú Principal</a></div>
+        <div class="option"><a href="reports.html" class="option-link">Informes por publicador</a></div>
+        <div class="option"><a href="monthly_reports.html" class="option-link">Totales</a></div>
     </aside>
     <div class="content">
         <div class="container">
             <form action="#">
-                <h1>Publicadores y precursores</h1>
+                <h1>Publicadores</h1>
                 <br>
                 <div class="row">
                     <div class="col-md-4">
