--- a/reports.html
+++ b/reports.html
@@ -16,7 +16,8 @@
 <body>
     <div id="topbar-container"></div>  
     <aside class="side-bar">
-        <div class="option"><a href="main_menu.html" class="option-link">Menú Principal</a></div>
+        <<div class="option"><a href="publishers.html" class="option-link">Publicadores</a></div>
+        <div class="option"><a href="monthly_reports.html" class="option-link">Totales</a></div>
     </aside>
     <section class="form">        
         <form id="informeForm">
