--- a/about_us.html
+++ b/about_us.html
@@ -5,18 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Asistente para el secretario de la congregación">
     <link rel="stylesheet" href="CSS/about_us_layout.css">
+    <link rel="stylesheet" href="CSS/topbar_layout.css">
+    <link rel="stylesheet" href="CSS/footer_layout.css">
+    <link rel="icon" href="images/Secretario_logo.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="icon" href="images/Secretario_logo.png">
     <title>Sobre nosotros</title>
 </head>
 <body>
-    <section class="top-bar">
-        <a href="main_menu.html">       
-            <div class="logo"></div>        
-            <div class="header">
-                <h3>Secretario</h3>
-            </div>
-        </a>     
-    </section>
+    <div id="topbar-container"></div>
     <div class="content">
         <header>
             <h1>Acerca de Nosotros</h1>
@@ -34,6 +32,9 @@
             </section>
         </main>
     </div>
-    <script src="javascript/footer.js"></script>  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="javascript/footer.js"></script>
+    <script src="javascript/topbar.js"></script>  
 </body>
 </html>
