--- a/terms_conditions.html
+++ b/terms_conditions.html
@@ -5,18 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Asistente para el secretario de la congregación">
     <link rel="stylesheet" href="CSS/policy-conditions_layout.css">
+    <link rel="stylesheet" href="CSS/topbar_layout.css">
+    <link rel="stylesheet" href="CSS/footer_layout.css">
+    <link rel="icon" href="images/Secretario_logo.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="icon" href="images/Secretario_logo.png">
     <title>Condiciones de uso</title>
 </head>
 <body>
-    <section class="top-bar">
-        <a href="main_menu.html">        
-            <div class="logo"></div>        
-            <div class="header">
-                <h3>Secretario</h3>
-            </div>
-        </a>     
-    </section>
+    <div id="topbar-container"></div>    
     <div class="content">
         <h1>Condiciones de uso</h1>
         <p><p>Al acceder y utilizar este sitio web, usted acepta cumplir con los siguientes términos y condiciones de uso:</p></p>
@@ -25,6 +23,9 @@
         <h2>Propiedad intelectual</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure eveniet recusandae atque voluptate et dicta omnis esse quam vitae dolore, voluptatum, libero laudantium officiis suscipit magnam commodi sint, cum magni dignissimos? Quis blanditiis perspiciatis, unde eligendi consequatur expedita sit voluptas, temporibus suscipit quo possimus inventore saepe est praesentium beatae? Facilis sequi fuga eum quisquam, rem qui blanditiis fugiat vel hic ipsum minus, corporis dicta? Veniam pariatur repellendus perferendis hic nostrum? Blanditiis mollitia, temporibus rem illo adipisci sint est iste vitae saepe veniam voluptatum ea nisi amet nostrum corrupti qui, facere animi incidunt facilis? Dicta obcaecati, nemo iste quisquam inventore eius vero quam vitae, a deleniti cumque exercitationem. Quasi officia ratione voluptate quia modi repudiandae voluptates nostrum esse id earum aperiam placeat, cupiditate dolorum! Beatae nostrum distinctio in aliquam laudantium recusandae iure minus ab asperiores natus, quos amet, molestias incidunt explicabo eum quod quaerat error doloribus? Quam voluptas praesentium fugit quia laudantium porro commodi voluptatibus accusantium pariatur corrupti! Esse perspiciatis, repudiandae rem, sapiente expedita eaque ut facilis nobis enim quasi quaerat magnam architecto possimus natus? Quia sequi molestias recusandae asperiores, atque illum dolorum commodi laboriosam magni alias fugiat explicabo, animi quas nihil ab itaque consequuntur, aliquam voluptates consequatur libero deserunt voluptate nam ipsam ut. Minima voluptatibus ipsum molestiae ut ad nihil dicta, aliquam cumque quos illum maiores sed? Quasi unde sunt similique ratione consectetur in eaque deserunt cumque illo doloribus incidunt, voluptatibus reiciendis cum ut officia sit quisquam nihil asperiores! Quae error repudiandae eveniet adipisci consectetur a consequuntur sequi nisi nesciunt, quos ipsam, eum alias beatae saepe, dolorem odit rerum. Reiciendis libero necessitatibus temporibus, quo assumenda earum, beatae, cupiditate doloribus illo non ipsa. Corporis perferendis eveniet eligendi quae alias, iste fugiat, impedit qui in assumenda voluptatem? Atque praesentium ipsa quam pariatur itaque ut culpa maxime dolore. Itaque esse similique dolorem nihil. Tenetur consequuntur nisi unde possimus maiores magni, reiciendis similique pariatur quisquam ab corrupti laboriosam vitae odit minima repellendus iusto nesciunt, maxime numquam sequi quia nam! Reprehenderit ea alias atque, fugit incidunt repellendus odit totam obcaecati placeat quis sit saepe magnam voluptatibus nemo impedit similique nisi tenetur consectetur inventore, dolore ratione eaque beatae magni? Natus quibusdam recusandae ipsa laudantium illo accusamus aut! Amet sapiente asperiores adipisci recusandae exercitationem quo accusamus delectus, id corporis voluptate veritatis aliquid distinctio inventore animi, repudiandae laudantium enim soluta dolore magnam praesentium dicta quasi quisquam rem. Id earum nam consequuntur impedit possimus repellendus, neque consectetur ea numquam minus fugiat ad. Quam fugit iure omnis ab sint delectus ex rem hic quod, labore velit perferendis adipisci, quae alias. Consectetur veniam vitae suscipit neque provident asperiores voluptate dicta error accusantium! Dolore itaque esse quia minus hic porro reiciendis eaque officiis totam voluptatibus, est dolor iusto dicta magni praesentium voluptates in, consectetur ea quam rem reprehenderit ad. Dolorem debitis voluptas quae illum iste, rem velit ullam aut impedit, sit, aperiam perferendis quasi id sunt obcaecati quam saepe facilis in ad distinctio vero! Accusamus nisi harum temporibus excepturi nobis odio ratione, sapiente placeat, repellat molestiae ipsa quo minima! Consequuntur, inventore molestiae non maxime beatae eos temporibus aut accusamus laboriosam eius ipsa fugit eveniet animi dicta autem vel corporis tempore illum laudantium quasi mollitia voluptates! Blanditiis maiores nihil laboriosam nostrum facere hic placeat ex dolor, adipisci aliquid, excepturi ab. Eligendi adipisci rem dolores facere hic voluptas dolorem beatae sequi tempore in earum deleniti reiciendis tempora tenetur non minus velit quaerat officia natus harum ea modi, libero iure dolor. Placeat neque sequi quae totam accusantium, odio quo, delectus voluptatibus dignissimos esse veniam voluptatem. Quia fugit, praesentium rerum fugiat sint ipsam sapiente, laborum cum iusto mollitia ab a dolore eveniet, voluptate explicabo ipsa eum. Dignissimos dicta velit perferendis quisquam magni accusantium saepe fuga, nisi vero ipsum quibusdam ullam soluta. Voluptatum beatae totam facilis sequi nostrum minima magni, voluptates inventore recusandae itaque nobis doloremque odio amet aspernatur modi voluptas. Nobis, quam dolor! Aut animi natus ea veniam reprehenderit, recusandae dolore inventore laudantium totam quaerat quia quod, obcaecati necessitatibus quam quae, sunt molestiae vel maxime voluptas debitis molestias dolorem magnam. Eum voluptatum minus pariatur illo esse libero nam ab atque non magni cum reprehenderit impedit ex, quasi eius tempora laboriosam rerum! Amet voluptatum quod nam doloremque nesciunt, impedit modi eum, necessitatibus rerum, aliquid accusamus repellendus tempore.</p>         
     </div>
-    <script src="javascript/footer.js"></script>  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="javascript/footer.js"></script>
+    <script src="javascript/topbar.js"></script> 
 </body>
 </html>
