--- a/topbar.html
+++ b/topbar.html
@@ -1,5 +1,5 @@
 <section class="top-bar">
-    <a href="main_menu.html">
+    <a href="publishers.html">
         <div class="logo"></div>
         <div class="header">
             <h3>Secretario</h3>
