--- a/user_settings.html
+++ b/user_settings.html
@@ -10,7 +10,7 @@
 </head>
 <body>    
     <section class="top-bar">
-        <a href="main_menu.html">        
+        <a href="publishers.html">        
             <div class="logo"></div>        
             <div class="header">
                 <h3>Secretario</h3>
@@ -18,7 +18,7 @@
         </a>     
     </section>    
     <aside class="side-bar">
-            <div class="option"><a href="main_menu.html" class="option-link">Menú Principal</a></div>
+            <div class="option"><a href="publishers.html" class="option-link">Menú Principal</a></div>
             <div class="option"><a href="" class="option-link">Congregación</a></div>
             <div class="option"><a href="" class="option-link">Contraseña</a></div>
             <div class="option"><a href="index.html" class="option-link">Cerrar sesión</a></div>
