Se agregó una página que muestra los informes del mes y los informes pendientes. Se renombro el archivo reports a reports_by_publisher

--- a/monthly_reports.html
+++ b/monthly_reports.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Informe mensual de publicadores">
-    <link rel="stylesheet" href="CSS/monthly_reports.css">
+    <link rel="stylesheet" href="CSS/monthly_reports_layout.css">
     <link rel="stylesheet" href="CSS/topbar_layout.css">
     <link rel="stylesheet" href="CSS/footer_layout.css">
     <link rel="icon" href="images/Secretario_logo.png">
@@ -16,7 +16,8 @@
     <div id="topbar-container"></div>
     <aside class="side-bar">
         <div class="option"><a href="publishers.html" class="option-link">Publicadores</a></div>
-        <div class="option"><a href="reports.html" class="option-link">Informes por publicador</a></div>        
+        <div class="option"><a href="reports_by_publisher.html" class="option-link">Informes mes anterior</a></div>
+        <div class="option"><a href="reports_by_publisher.html" class="option-link">Informes por publicador</a></div>        
     </aside>
     <div class="content">
         <div class="container">
