--- a/publishers.html
+++ b/publishers.html
@@ -16,7 +16,8 @@
 <body>
     <div id="topbar-container"></div>
     <aside class="side-bar">
-        <div class="option"><a href="reports.html" class="option-link">Informes por publicador</a></div>
+        <div class="option"><a href="reports.html" class="option-link">Informes mes anterior</a></div>
+        <div class="option"><a href="reports_by_publisher.html" class="option-link">Informes por publicador</a></div>
         <div class="option"><a href="monthly_reports.html" class="option-link">Totales</a></div>
     </aside>
     <div class="content">
